<resources>
    <string name="app_name">CapQR</string>
    <string name="action_login">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">email</string>
    <string name="login">Login</string>
    <string name="signout">Sign Out</string>
    <string name="scan">scan</string>
    <string name="userName">Username</string>
    <string name="accountInfo">Welcome you currently have</string>
    <string name="sendMoney">Send Money</string>
    <string name="receiveMoney">Receive Money</string>
    <string name="enter_amount_to_send">Enter Amount to Send</string>
    <string name="create_code">Create Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="share_the_code">Share the Code</string>
    <string name="worth_100">Worth $100</string>
    <string name="congrats_you_apos_re_100_richer">Congrats, you\'re $100 richer!</string>
    <string name="you_sent_money">You\'ve Successfully sent $100</string>
    <string name="done">Done</string>
    <string name="done_balance">$3900</string>


</resources>
