<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidtitan.hackathon.login.AccountActivity">


    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:text="@string/accountInfo" />

    <TextView
        android:id="@+id/accountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="$4000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/accountStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountBalance"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/sendMoney" />

        <Button
            android:id="@+id/receive_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/receiveMoney" />

    </LinearLayout>
</RelativeLayout>
