<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidtitan.hackathon.login.LoginActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_card_size"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="8dp"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/login_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_input_layout_email"
                android:padding="8dp"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin">

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
